...
  User? get currentUser => _auth.currentUser;


  Future signIn({required String email, required String password}) async {
    if (passwordConfirmed()) {
      await _auth.signInWithEmailAndPassword(
          email: 'email'.trim(), password: 'password'.trim());

      //add user details
    }
  }

  bool passwordConfirmed() {
...
